added page 6, fixed page 5

--- a/src/components/Page3.astro
+++ b/src/components/Page3.astro
@@ -59,7 +59,7 @@ import Ornament6 from "../assets/ornament-6.gif";
                 putri kedua dari
             </h6>
             <p class="text-lg page3Content">
-                Bapak&nbsp;Gatot&nbsp;Alibasa,&nbsp;S.E. dan
+                Bapak&nbsp;Gatot&nbsp;Alibasah,&nbsp;S.E. dan
                 Ibu&nbsp;Suharyati,&nbsp;S.Pd.
             </p>
             <div class="my-4">
@@ -171,12 +171,12 @@ import Ornament6 from "../assets/ornament-6.gif";
             trigger: "#Page3",
             pin: el,
             start: "top top",
-            end: () => `+=${window.innerHeight * 2}`,
+            end: () => `+=${window.innerHeight * 3}`,
         });
 
         gsap.to(el, {
             scrollTrigger: {
-                trigger: "#Page4",
+                trigger: "#Page5",
                 scrub: 1,
                 markers: false,
                 start: "top top",
