--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Page2 from "../components/Page2.astro";
 import Page3 from "../components/Page3.astro";
 import Page4 from "../components/Page4.astro";
 import Page5 from "../components/Page5.astro";
+import Page6 from "../components/Page6.astro";
 ---
 
 <Layout title="#AlDanLiaMenujuHalal2025">
@@ -13,4 +14,5 @@ import Page5 from "../components/Page5.astro";
     <Page3></Page3>
     <Page4></Page4>
     <Page5></Page5>
+    <Page6></Page6>
 </Layout>
