fixed repetitive animation toggleActions. added page our gallery

--- a/src/components/Page4.astro
+++ b/src/components/Page4.astro
@@ -96,7 +96,7 @@
         trigger: "#Page4",
         pin: "#borderPage4",
         start: "top top",
-        end: () => `+=${window.innerHeight * 3}`,
+        end: () => `+=${window.innerHeight * 2}`,
     });
 
     gsap.to("#borderPage4", {
@@ -105,9 +105,12 @@
             scrub: true,
             markers: false,
             start: "top top",
+            // end: () => `+=${window.innerHeight * 1}`,
         },
         y: "-100vh",
-    });
+        // display: "none"
+    })
+    .then(() => gsap.to("#borderPage4", { display: "none" }));
 
 
 </script>
