--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Page3 from "../components/Page3.astro";
 import Page4 from "../components/Page4.astro";
 import Page5 from "../components/Page5.astro";
 import Page6 from "../components/Page6.astro";
+import Page7 from "../components/Page7.astro";
 ---
 
 <Layout title="#AlDanLiaMenujuHalal2025">
@@ -15,4 +16,5 @@ import Page6 from "../components/Page6.astro";
     <Page4></Page4>
     <Page5></Page5>
     <Page6></Page6>
+    <Page7></Page7>
 </Layout>
