--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,7 +22,7 @@ body {
     width: 100%;
     height: 100%;
     color: var(--color-primary);
-    touch-action: none;
+    /* touch-action: none; */
 }
 
 body {
