--- a/src/components/Page3.astro
+++ b/src/components/Page3.astro
@@ -146,7 +146,7 @@ import Ornament6 from "../assets/ornament-6.gif";
                 start: "top top",
                 end: () => `+=${window.innerHeight * 3 - 5}`,
                 toggleActions: "play pause resume pause",
-                markers: true,
+                markers: false,
             },
         },
         // 4,
@@ -177,7 +177,7 @@ import Ornament6 from "../assets/ornament-6.gif";
                 start: "top top",
                 end: () => `+=${window.innerHeight * 3 - 5}`,
                 toggleActions: "play pause resume pause",
-                markers: true,
+                markers: false,
             },
         },
     );
