--- a/src/components/Page5.astro
+++ b/src/components/Page5.astro
@@ -7,6 +7,7 @@
     class="h-screen flex justify-center overflow-hidden section"
 >
     <div class="w-xl relative flex items-center">
+        <div class="border-t-1 border-primary w-full max-w-5/6 absolute" style="top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
         <div class="w-full max-w-5/6 mx-auto">
             <div class="my-20 text-center max-w-5/6 mx-auto">
                 <h6 class="font-cursive text-xl font-bold text-primary">akad nikah</h6>
