--- a/src/components/Page1.astro
+++ b/src/components/Page1.astro
@@ -5,9 +5,9 @@ import Ornament2 from "../assets/ornament-2.gif";
 ---
 
 <section id="Page1" class="h-screen w-full flex items-center justify-center overflow-hidden section">
-    <div>
+    <div id="Page1Content" class="w-5/6">
         <h1 class="text-lg text-center mb-20 z-0" id="textURInvited">YOU ARE INVITED TO</h1>
-        <div class="flex items-center justify-center relative w-64 z-100">
+        <div class="flex items-center justify-center relative w-64 z-100 mx-auto mb-14">
             <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 216 200"
@@ -39,7 +39,7 @@ import Ornament2 from "../assets/ornament-2.gif";
             </div>
         </div>
 
-        <div class="flex justify-center mt-20 z-0">
+        <div class="flex justify-center z-0 mt-10">
             <button class="border border-primary border-solid p-1/2 cursor-pointer w-full" id="btnOpenInvitation">
                 OPEN INVITATION
             </button>
@@ -81,12 +81,22 @@ import Ornament2 from "../assets/ornament-2.gif";
         { y: 0, opacity: 1, duration: 2 },
         3.5
     );
+
     tl.fromTo(
         "#btnOpenInvitation",
         { y: "-=198.5", opacity: 0 },
         { y: 0, opacity: 1, duration: 2 },
         4
     );
+
+    if(document.getElementById("txtGuestName")) {
+        tl.fromTo(
+            "#txtGuestName",
+            { y: "-=198.5", opacity: 0 },
+            { y: 0, opacity: 1, duration: 2 },
+            3.5
+        );
+    }
 
     tl.fromTo(
         "#imgOrnament2",
@@ -95,7 +105,7 @@ import Ornament2 from "../assets/ornament-2.gif";
         3
     );
 
-    tl.fromTo(
+    gsap.fromTo(
         "#imgOrnament2",
         { transformOrigin: "80% 100%", rotation: -5 }, 
         {
@@ -106,9 +116,9 @@ import Ornament2 from "../assets/ornament-2.gif";
             repeat: -1,
             yoyo: true,
             yoyoEase: "none",
-            ease: "none"
+            ease: "none",
+            delay: 5.5,
         },
-        6
     );
 
     tl.fromTo(
@@ -118,4 +128,19 @@ import Ornament2 from "../assets/ornament-2.gif";
         4
     );
 
+</script>
+
+<script>
+    let params = new URLSearchParams(window.location.search);
+    let name = params.get('name');
+    
+    if(name != null) {
+        const txtNode = document.createElement('h2');
+        const divNode = document.getElementById("Page1Content");
+        txtNode.innerText = name;
+        txtNode.className = "text-center text-xl text-primary";
+        txtNode.id = "txtGuestName";
+
+        divNode?.insertBefore(txtNode, divNode.children[divNode.children.length - 1]);
+    }    
 </script>
