added astro db, layouting page 7

--- a/src/components/Page3.astro
+++ b/src/components/Page3.astro
@@ -128,29 +128,29 @@ import Ornament6 from "../assets/ornament-6.gif";
         0,
     );
 
-    gsap.fromTo(
-        "#imgOrnament5A",
-        { rotation: -10, x: 0 },
-        {
-            rotation: 7,
-            x: 0,
-            duration: 10,
-            repeat: -1,
-            repeatRefresh: true,
-            yoyo: true,
-            yoyoEase: "none",
-            ease: "none",
-            delay: 4,
-            scrollTrigger: {
-                trigger: "#Page3",
-                start: "top top",
-                end: () => `+=${window.innerHeight * 3 - 5}`,
-                toggleActions: "play pause resume pause",
-                markers: false,
-            },
-        },
-        // 4,
-    );
+    // gsap.fromTo(
+    //     "#imgOrnament5A",
+    //     { rotation: -10, x: 0 },
+    //     {
+    //         rotation: 7,
+    //         x: 0,
+    //         duration: 10,
+    //         repeat: -1,
+    //         repeatRefresh: true,
+    //         yoyo: true,
+    //         yoyoEase: "none",
+    //         ease: "none",
+    //         delay: 4,
+    //         scrollTrigger: {
+    //             trigger: "#Page3",
+    //             start: "top top",
+    //             end: () => `+=${window.innerHeight * 3 - 5}`,
+    //             toggleActions: "play pause resume pause",
+    //             markers: false,
+    //         },
+    //     },
+    //     // 4,
+    // );
 
     tl.fromTo(
         "#imgOrnament5B",
@@ -159,28 +159,28 @@ import Ornament6 from "../assets/ornament-6.gif";
         0.5,
     );
 
-    gsap.fromTo(
-        "#imgOrnament5B",
-        { rotation: 10, x: 0 },
-        {
-            rotation: -7,
-            x: 0,
-            duration: 15,
-            repeat: -1,
-            repeatRefresh: true,
-            yoyo: true,
-            yoyoEase: "none",
-            ease: "none",
-            delay: 4.5,
-            scrollTrigger: {
-                trigger: "#Page3",
-                start: "top top",
-                end: () => `+=${window.innerHeight * 3 - 5}`,
-                toggleActions: "play pause resume pause",
-                markers: false,
-            },
-        },
-    );
+    // gsap.fromTo(
+    //     "#imgOrnament5B",
+    //     { rotation: 10, x: 0 },
+    //     {
+    //         rotation: -7,
+    //         x: 0,
+    //         duration: 15,
+    //         repeat: -1,
+    //         repeatRefresh: true,
+    //         yoyo: true,
+    //         yoyoEase: "none",
+    //         ease: "none",
+    //         delay: 4.5,
+    //         scrollTrigger: {
+    //             trigger: "#Page3",
+    //             start: "top top",
+    //             end: () => `+=${window.innerHeight * 3 - 5}`,
+    //             toggleActions: "play pause resume pause",
+    //             markers: false,
+    //         },
+    //     },
+    // );
 
     tl.fromTo(
         "#imgOrnament6",
