--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource-variable/alegreya";
 import "@fontsource/great-vibes";
+import "@fontsource/love-ya-like-a-sister";
 import "../styles/global.css";
 const { title } = Astro.props;
 ---
