--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,8 @@
     --default-font-family: "Alegreya Variable", "serif";
     --default-font-cursive: "Great Vibes", "cursive";
     --font-cursive: "Great Vibes", "cursive";
+    --default-font-brushes: "Love Ya Like A Sister", "system-ui";
+    --font-brushes: "Love Ya Like A Sister", "system-ui";
 
 
 
