--- a/src/components/Page7.astro
+++ b/src/components/Page7.astro
@@ -26,7 +26,7 @@ import AldanJulia2 from "../assets/aldanjulia2.png";
         >
             <a
                 href="javascript:void(0)"
-                class="font-brushes text-4xl text-center text-primary hover:opacity-75 hover:[&>*]:shadow-[0_0_50px_var(--color-quinary)]"
+                class="font-brushes text-4xl text-center text-primary hover:opacity-75 hover:[&>*]:shadow-[0_0_50px_var(--color-quinary)] active:opacity-75 active:[&>*]:shadow-[0_0_50px_var(--color-quinary)]"
             >
                 <span class="bg-quinary rounded">story&nbsp;by</span><br /><span
                     class="bg-quinary rounded"><strong>JULIA</strong></span
@@ -34,7 +34,7 @@ import AldanJulia2 from "../assets/aldanjulia2.png";
             </a>
             <a
                 href="javascript:void(0)"
-                class="font-brushes text-4xl text-center text-primary hover:opacity-75 hover:[&>*]:shadow-[0_0_50px_var(--color-tertiary)]"
+                class="font-brushes text-4xl text-center text-primary hover:opacity-75 hover:[&>*]:shadow-[0_0_50px_var(--color-tertiary)] active:opacity-75 active:[&>*]:shadow-[0_0_50px_var(--color-tertiary)]"
             >
                 <spam class="bg-tertiary rounded">story&nbsp;by</spam><br
                 /><spam class="bg-tertiary rounded"><strong>ALDAN</strong></spam
