--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,8 @@
 @import "tailwindcss";
+@import "flowbite/src/themes/default";
+@plugin "flowbite/plugin";
+@source "../../node_modules/flowbite";
+
 
 @theme {
     --default-font-family: "Alegreya Variable", "serif";
