--- a/src/components/Page7.astro
+++ b/src/components/Page7.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import AldanJulia2 from "../assets/aldanjulia2.png";
+import AldanJulia2 from "../assets/gallery/aldanjulia2.png";
 ---
 
 <section
@@ -87,9 +87,18 @@ import AldanJulia2 from "../assets/aldanjulia2.png";
             </div>
             <!-- Modal body -->
             <div
-                class="px-4 md:px-5 py-8 space-y-4 text-lg leading-relaxed text-primary text-justify"
+                class="px-4 md:px-5 pt-8 pb-4 space-y-4 text-lg leading-relaxed text-primary text-justify"
                 id="modal-content"
             >
+            </div>
+            <div class="p-4 md:p-5 text-center">
+                <button
+                    data-modal-hide="story-modal"
+                    type="button"
+                    class="text-white bg-tertiary hover:bg-secondary focus:ring-4 focus:outline-none focus:ring-secondary font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center"
+                >
+                    Kiwkiww &lt;3
+                </button>
             </div>
         </div>
     </div>
