--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Page4 from "../components/Page4.astro";
 import Page5 from "../components/Page5.astro";
 import Page6 from "../components/Page6.astro";
 import Page7 from "../components/Page7.astro";
+import Page8 from "../components/Page8.astro";
 ---
 
 <Layout title="#AlDanLiaMenujuHalal2025">
@@ -17,4 +18,5 @@ import Page7 from "../components/Page7.astro";
     <Page5></Page5>
     <Page6></Page6>
     <Page7></Page7>
+    <Page8></Page8>
 </Layout>
