--- a/src/components/Page8.astro
+++ b/src/components/Page8.astro
@@ -17,7 +17,7 @@ const _ADDRS = `Komplek Persada, Jl. Piranha, Blok F1 No. 24 Indralaya Indah, In
                     Wedding Gift?
                 </h1>
                 <p class="text-base text-primary page8AnimElement">
-                    Your presence is the only present we need (seriously!), but
+                    your presence is the only present we need (seriously!), but
                     if you insist on spoiling us, you can check out our digital
                     wishing well below!
                 </p>
