--- a/src/components/Page8.astro
+++ b/src/components/Page8.astro
@@ -8,7 +8,7 @@ const _ADDRS = `Komplek Persada, Jl. Piranha, Blok F1 No. 24 Indralaya Indah, In
 ---
 <section
     id="Page8"
-    class="h-screen flex justify-center overflow-hidden section"
+    class="min-h-screen flex justify-center overflow-hidden section"
 >
     <div class="w-xl relative flex">
         <div class="w-full max-w-5/6 mx-auto py-15">
