--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Page5 from "../components/Page5.astro";
 import Page6 from "../components/Page6.astro";
 import Page7 from "../components/Page7.astro";
 import Page8 from "../components/Page8.astro";
+import Page9 from "../components/Page9.astro";
 ---
 
 <Layout title="#AlDanLiaMenujuHalal2025">
@@ -19,4 +20,5 @@ import Page8 from "../components/Page8.astro";
     <Page6></Page6>
     <Page7></Page7>
     <Page8></Page8>
+    <Page9></Page9>
 </Layout>
